# smartClaude

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  README.pt-BR.md  detect_tecla.py  detectar_tecla_todos.py  gerar_5_gifs.sh  gerar_conjunto.sh  minitela-daemon.service  minitela.py  minitela_clawd.py  minitela_daemon.py  minitela_modelo.py  montar_bichinhos.sh  montar_clawd_estatico.sh  montar_clawd_gif.sh  pyproject.toml  render_bichinhos.py  render_dashboard.py  render_telas.py
docs/historico/: 2026-07-notas-de-sessao.md  fork-sidecar-bugs.md
patches/sidecar/: 0001-fix-mode-dispatch.patch  0002-fix-crc-zerado.patch  0003-fix-ack-escrita.patch  0004-add-show-image.patch
scripts/: bootstrap-vendor.md
src/minitela/: __init__.py  cli.py
src/minitela/core/: __init__.py  dispositivo.py  paginas.py  protocolo.py  transporte.py
src/minitela/dados/: claude.py
src/minitela/daemon/: estado.py
src/minitela/entrada/: tecla.py
src/minitela/render/: clawd.py  comum.py  telas.py
src/minitela/render/sprites/: LICENSE
tests/: conftest.py  test_acf.py  test_dados.py  test_dispositivo.py  test_estado.py  test_gif.py  test_projeto.py  test_protocolo.py  test_render.py  test_tecla.py  test_transporte.py
tests/hardware/: test_build.py  test_dispositivo.py
