[project]
name = "minitela"
version = "0.1.0"
description = "Cliente e daemon para a Minitela do notebook Positivo Vision R15M"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["pillow>=10"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
minitela = "minitela.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"minitela.render" = ["sprites/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not hardware'"
markers = [
    "hardware: exige a Minitela conectada em /dev/ttyACM0 (rodar com: pytest -m hardware)",
]
